2005-08-22  Adam Schreiber <sadam@clemson.edu>
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * src/seahorse-add-subkey.c:
    * src/seahorse-add-uid.c:
    * src/seahorse-delete.c:
    * src/seahorse-expires.c:
    * src/seahorse-generate-adv.c:
    * src/seahorse-generate-druid.c:
    * src/seahorse-key-properties.c:
    * src/seahorse-revoke.c:
    * src/seahorse-sign.c: Renaming seahorse_key_op functions to 
    seahorse_pgp_key_op (Bug #314132)
    
2005-08-20  Nate Nielsen  <nielsen@memberwebs.com> 

    * src/seahorse-key-properties.c: Fix problem with treating local keys
    as remote keys.
    * src/seahorse-key-manager-store.c: Fix crash. Don't unref key source. 
	* Merged changes from stable branch. 

2005-08-16  Nate Nielsen  <nielsen@memberwebs.com> 

	* Merged changes from stable branch. 

2005-08-15  Nate Nielsen  <nielsen@memberwebs.com>

    * configure.in:
    * seahorse-sharing.c:
    * seahorse-ldap-source.c:
    * seahorse-util.c:
    * seahorse-key-manager.c: Fix compilation warnings 
    * HACKING:
    * configure.in: Disable fatal messsages by default. Use
    the --enable-fatal-messages configure switch to enable.
    * agent/gtk-secure-entry.c: Fixed compile warning.
    * libseahorse/Makefile.am:
    * libseahorse/seahorse-pgp-key-op.c:
    * libseahorse/seahorse-pgp-key-op.h:
    * src/Makefile.am:
    * src/seahorse-add-subkey.c:
    * src/seahorse-add-uid.c:
    * src/seahorse-delete.c:
    * src/seahorse-expire.c:
    * src/seahorse-generate-adv.c:
    * src/seahorse-generate-druid.c:
    * src/seahorse-generate-select.c:
    * src/seahorse-key-manager.c:
    * src/seahorse-key-op.c:
    * src/seahorse-key-op.h:
    * src/seahorse-key-properties.c:
    * src/seahorse-revoke.c:
    * src/seahorse-sign.c: Moved src/seahorse-key-op.* to libseahorse
    as seahorse-pgp-key-op.*
    * HACKING:
    * configure.in:
    * main.c: Provided a way (--disable-fatal-messages) to turn off fatal 