@@ -1,3 +1,10 @@
+2005-08-23  Adam Schreiber <sadam@clemson.edu>
+    * libseahorse/seahorse-pgp-key.c:
+    * libseahorse/seahorse-pgp-key.h:
+    * src/seahorse-key-properties.c: Moved gpgme usage out of
+    src/seahorse-key-properties. Patch from Jim Pharis
+    (Bug #314132)
+
 2005-08-22  Adam Schreiber <sadam@clemson.edu>
     * libseahorse/seahorse-pgp-key-op.c:
     * libseahorse/seahorse-pgp-key-op.h:
